Created summaries for each execution